kustomize/infra/destination-rule-tripviewer.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: tripviewer
spec:
  host: tripviewer
  subsets:
  - name: v1
    labels:
      version: v1
  # - name: v2
  #   labels:
  #     version: v2
