kustomize/infra/ingressrules.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - http:
        paths:
        - path: /
          backend:
            serviceName: tripviewer
            servicePort: 80
        - path: /api/poi
          backend:
            serviceName: poi
            servicePort: 80
        - path: /api/trips
          backend:
            serviceName: trips
            servicePort: 80
        - path: /api/user
          backend:
            serviceName: user
            servicePort: 80
        - path: /api/user-java
          backend:
            serviceName: userjava
            servicePort: 80
